# talos-sdk-rust

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.agent/: README.md  test_manifest.yml
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  support-responder.md
.agent/agents/testing/: api-tester.md  performance-benchmarker.md  test-results-analyzer.md  tool-evaluator.md  workflow-optimizer.md
.agent/workflows/: README.md
.agent/workflows/development/: run-dashboard.md  tga-workflow.md  update-readme.md
.agent/workflows/style-guides/: readme-style.md
artifacts/coverage/: coverage.xml
artifacts/test/: results.json
examples/: vector_gen.rs
scripts/: pre-commit  test.sh  test_conformance.sh
src/: a2a_v1.rs  canonical.rs  client.rs  errors.rs  identity.rs  lib.rs
talos-ucp/: Cargo.toml
talos-ucp/src/: lib.rs  ucp_tests.rs
talos-ucp/src/adapters/: mod.rs  reqwest_discovery.rs  reqwest_shopping.rs
talos-ucp/src/domain/: ap2.rs  discovery.rs  headers.rs  mod.rs  profile.rs  sfv.rs  shopping.rs  signer.rs
talos-ucp/src/ports/: mod.rs
